amazon-bedrock/1.1/modules/ROOT/pages/amazon-bedrock-connector-studio.adoc
= Using Anypoint Studio to Configure Amazon Bedrock Connector 1.1 
:exchange-search-name: amazon bedrock 
:connector-name: Amazon Bedrock
:lc-connector-name: amazon-bedrock
:studio-connector-name: Amazon Bedrock Connector

include::connectors::partial$t-studio-partial.adoc[tags=topic-intro]

[[create-mule-project]]
== Create a Mule Project

include::connectors::partial$t-studio-partial.adoc[tags=create-project-intro]

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Amazon Bedrock Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In *Mule Palette*, click *(X) Search in Exchange*.
. In *Add Dependencies to Project*, type `amazon bedrock` in the search field.
. Click *Amazon Bedrock Connector* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-source]]
== Configure a Source

include::connectors::partial$t-studio-partial.adoc[tags=configure-source-intro]
You can configure one of these sources to use with Amazon Bedrock Connector:

include::connectors::partial$t-studio-partial.adoc[tags=listener-scheduler-descriptions]

include::connectors::partial$t-studio-partial.adoc[tags=listener-steps]

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you are specifying an action for that connector to perform.

To add an operation for Amazon Bedrock Connector, follow these steps:

. In *Mule Palette*, select *Amazon Bedrock Connector* and then select the operation to add.
. Drag the operation onto the Studio canvas, next to the source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, configure a global element that all instances of that connector in the app can use. In addition to the required access key and secret key fields, you can enable the default AWS credentials provider chain to obtain credentials from the AWS environment.

To configure the global element for Amazon Bedrock Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the *General* configuration screen for the operation, click the *Add* icon to access the global element configuration fields.
. In the *General* tab, in *Connection*, select the authentication method to configure:
* <<basic>>
* <<role>>

+
You can reference a configuration file that contains ANT-style property placeholders (recommended) or enter your authorization credentials in the global configuration properties. You can also enable *Try Default AWSCredentials Provider Chain* to obtain credentials from the AWS environment. For information about the benefits of using property placeholders and how to configure them, refer to xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
. In the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[basic]]
=== Basic 

Enter the following information in the *General* tab of the *Global Element Properties* screen to configure Basic Authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select *Basic*.
|Access Key | Enter the access key provided by Amazon.
|Secret Key | Enter the secret key provided by Amazon.
|Session Token | Optionally enter the session token provided by Amazon Security Token Service (AWS STS).
|Try Default AWSCredentials Provider Chain | Enable this field to obtain credentials from the AWS environment. The default is `false`.
|Region Endpoint | Enter the AWS region endpoint. The default is `us-east-1`.
|===

[[role]]
=== Role 

Enter the following information in the *General* tab of the *Global Element Properties* screen to configure Role Authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select *Role*.
|Role ARN | Enter the role to assume to gain cross-account access.
|Access Key | Enter the access key provided by Amazon.
|Secret Key | Enter the secret key provided by Amazon.
|Try Default AWSCredentials Provider Chain | Enable this field to obtain credentials from the AWS environment. The default is `false`.
|Region Endpoint | Enter the AWS region endpoint. The default is `us-east-1`.
|===

[[configure-other-fields]]
== Configure Additional Connector Fields

After you configure a global element for the connector, configure the other required fields. The required fields vary depending on which connector operation you use.

For detailed configuration information for each operation type, see xref:amazon-bedrock-connector-additional-config.adoc[Amazon Bedrock Connector - Additional Configuration Information].

[[view-app-log]]
== View the App Log

include::connectors::partial$t-studio-partial.adoc[tags=view-app-log]

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:{lc-connector-name}-connector-reference.adoc[Amazon Bedrock Connector Reference]
* https://help.salesforce.com[Salesforce Help]
